byte-code-compiler/test_files/typing/bad/testfile-undef_var-2.psc

int_32 main() { int_32 x; }
int_32 n() { x; }
